RESOLVED FIXED308180
[block-in-inline] Empty <span></span> with decoration is incorrectly positioned when sibling block margin is present
https://bugs.webkit.org/show_bug.cgi?id=308180
Summary [block-in-inline] Empty <span></span> with decoration is incorrectly positio...
alan
Reported 2026-02-18 16:46:21 PST
ssia
Attachments
Patch (6.63 KB, patch)
2026-02-18 17:03 PST, alan
no flags
Patch (6.63 KB, patch)
2026-02-19 08:26 PST, alan
no flags
Patch (23.60 KB, patch)
2026-02-20 06:30 PST, alan
no flags
[fast-cq]Patch (23.13 KB, patch)
2026-02-20 08:39 PST, alan
no flags
alan
Comment 1 2026-02-18 17:03:33 PST
alan
Comment 2 2026-02-19 08:26:49 PST
alan
Comment 3 2026-02-20 06:30:00 PST
alan
Comment 4 2026-02-20 08:39:37 PST
Created attachment 478426 [details] [fast-cq]Patch
EWS
Comment 5 2026-02-20 11:30:03 PST
Committed 307931@main (6a3177ec0f7b): <https://commits.webkit.org/307931@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478426 [details].
Radar WebKit Bug Importer
Comment 6 2026-02-20 11:31:12 PST
Note You need to log in before you can comment on or make changes to this bug.